[project]
name = "db-myproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "duckdb>=1.5.3",
    "finance-datareader>=0.9.202",
    "flet>=0.85.2",
    "flet-charts>=0.85.2",
    "flet-datatable2>=0.85.2",
    "kaleido>=1.3.0",
    "pandas>=3.0.3",
    "pillow>=12.2.0",
    "plotly-express>=0.4.1",
]
